--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,7 @@ clap = { version = "4.5", features = ["derive"] }
 ping = "0.6"
 tokio = { version = "1.47", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+hickory-resolver = { version = "0.25" }
+humantime = "2.2"
+tracing-subscriber-multi = "0.1"
+file-rotate = "0.7"
