--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,13 @@ codegen-units = 1
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 ping = "0.6"
-tokio = { version = "1.47", features = ["full"] }
+tokio = { version = "1.47", features = [
+    "signal",
+    "rt",
+    "rt-multi-thread",
+    "time",
+    "macros",
+] }
 tracing = "0.1"
 hickory-resolver = { version = "0.25" }
 humantime = "2.2"
