--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,5 +46,6 @@ jobs:
       - name: Publish artifacts
         uses: houseabsolute/actions-rust-release@v0
         with:
-          executable-name: pinger
+          executable-name: "pinger"
+          changes-file: ""
           target: ${{ matrix.platform.target }}
