--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,8 +3,14 @@ name: Build
 on:
   push:
     branches: ["master"]
+    paths-ignore:
+      - "**/*.md"
+      - ".gitignore"
   pull_request:
     branches: ["master"]
+    paths-ignore:
+      - "**/*.md"
+      - ".gitignore"
 
 env:
   CARGO_TERM_COLOR: always
