--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "pinger"
 version = "0.1.0"
 edition = "2024"
+publish = false
+license = "MIT OR Apache-2.0"
 
 [profile.release]
 opt-level = 3
