--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 opt-level = 3
 lto = true
 codegen-units = 1
+strip = true
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
