--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,6 @@ codegen-units = 1
 strip = true
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
-ping = "0.6"
 tokio = { version = "1.47", features = [
     "signal",
     "rt",
@@ -21,9 +19,17 @@ tokio = { version = "1.47", features = [
     "time",
     "macros",
 ] }
-tracing = "0.1"
-hickory-resolver = { version = "0.25" }
+
+# cli
+clap = { version = "4.5", features = ["derive"] }
 humantime = "2.2"
+
+# network
+ping = "0.6"
+hickory-resolver = "0.25"
+
+# logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing-subscriber-multi = "0.1"
 file-rotate = "0.7"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
